--- a/notebooks/03_2_preprocess_using_MOA.ipynb
+++ b/notebooks/03_2_preprocess_using_MOA.ipynb
@@ -18,17 +18,47 @@
    "cell_type": "markdown",
    "id": "55d070de-8697-4f98-a11b-eab4e3d5c281",
    "metadata": {},
-   "source": "### Running onlineBagging without any preprocessing"
+   "source": [
+    "## 1. Running OnlineBagging without any preprocessing\n",
+    "* This is just to give us a baseline to compare with "
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "14681f54-23a1-4f93-9145-abf484c91c54",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-26T01:25:19.016619Z",
-     "start_time": "2024-04-26T01:25:05.483484Z"
+     "start_time": "2024-04-29T11:57:00.920700Z"
+    },
+    "jupyter": {
+     "is_executing": true
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "capymoa_root: /Users/ng98/Desktop/CODE/CapyMOA_Latest/src/capymoa\n",
+      "MOA jar path location (config.ini): /Users/ng98/Desktop/CODE/CapyMOA_Latest/src/capymoa/jar/moa.jar\n",
+      "JVM Location (system): \n",
+      "JAVA_HOME: /Users/ng98/Library/Java/JavaVirtualMachines/openjdk-14.0.1/Contents/Home\n",
+      "JVM args: ['-Xmx8g', '-Xss10M']\n",
+      "Sucessfully started the JVM and added MOA jar to the class path\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "79.05190677966102"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from capymoa.stream import stream_from_file\n",
     "from capymoa.classifier import OnlineBagging\n",
@@ -54,32 +84,7 @@
     "    ob_learner.train(instance)\n",
     "\n",
     "ob_evaluator.accuracy()"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "capymoa_root: /Users/ng98/Desktop/CODE/CapyMOA_Latest/src/capymoa\n",
-      "MOA jar path location (config.ini): /Users/ng98/Desktop/CODE/CapyMOA_Latest/src/capymoa/jar/moa.jar\n",
-      "JVM Location (system): \n",
-      "JAVA_HOME: /Users/ng98/Library/Java/JavaVirtualMachines/openjdk-14.0.1/Contents/Home\n",
-      "JVM args: ['-Xmx8g', '-Xss10M']\n",
-      "Sucessfully started the JVM and added MOA jar to the class path\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "79.05190677966102"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 1
+   ]
   },
   {
    "attachments": {},
@@ -87,19 +92,33 @@
    "id": "0c1360ef-0583-4c87-8645-1e2d701fffca",
    "metadata": {},
    "source": [
-    "### Online Bagging using the preprocessing method from MOA\n",
+    "### OnlineBagging using the preprocessing method from MOA\n",
+    "* Here we use ```NormalisationFilter``` filter from MOA to online normalise instances.\n",
     "* The API is still a bit rough"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "id": "ae9bb646-e0d1-4de6-b5a1-cff0f0a1b172",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-26T01:25:22.958745Z",
-     "start_time": "2024-04-26T01:25:19.024248Z"
+     "end_time": "2024-04-29T11:52:48.998749Z",
+     "start_time": "2024-04-29T11:52:45.889095Z"
     }
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "79.69412076271186"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from capymoa.stream import Stream\n",
     "from moa.streams.filters import StandardisationFilter, NormalisationFilter\n",
@@ -126,20 +145,15 @@
     "    # print(instance.x)\n",
     "\n",
     "ob_evaluator.accuracy()"
-   ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "79.69412076271186"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 2
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ca35fc1b11b6047",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
