fix: update tests and evaluation
Changed test_then_train to cumulative. Corrected recently added tests. Changes affected notebooks.

--- a/notebooks/SSL_example.ipynb
+++ b/notebooks/SSL_example.ipynb
@@ -70,12 +70,12 @@
      "data": {
       "text/plain": [
        "{'learner': 'OSNN(num_center=10, window_size=200, beta=1, gamma=1)',\n",
-       " 'cumulative': <capymoa.evaluation.evaluation.ClassificationEvaluator at 0x2d9207550>,\n",
-       " 'windowed': <capymoa.evaluation.evaluation.ClassificationWindowedEvaluator at 0x2d92271f0>,\n",
-       " 'wallclock': 39.425512075424194,\n",
-       " 'cpu_time': 367.553631,\n",
+       " 'cumulative': <capymoa.evaluation.evaluation.ClassificationEvaluator at 0x2dcc989d0>,\n",
+       " 'windowed': <capymoa.evaluation.evaluation.ClassificationWindowedEvaluator at 0x2dcc98c10>,\n",
+       " 'wallclock': 59.64399003982544,\n",
+       " 'cpu_time': 494.911162,\n",
        " 'max_instances': 1000,\n",
-       " 'stream': <capymoa.datasets._datasets.Electricity at 0x103a5bfd0>,\n",
+       " 'stream': <capymoa.datasets._datasets.Electricity at 0x2dcc90d90>,\n",
        " 'unlabeled': 990,\n",
        " 'unlabeled_ratio': 0.989010989010989}"
       ]
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f34a321e-d73e-412e-a5da-815dfa78ef89",
    "metadata": {},
    "outputs": [
