fix: update tests and evaluation
Changed test_then_train to cumulative. Corrected recently added tests. Changes affected notebooks.

--- a/notebooks/02_sklearn.ipynb
+++ b/notebooks/02_sklearn.ipynb
@@ -42,14 +42,6 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading electricity_tiny.arff\n",
-      "100% [..............................................................................] 17221 / 17221"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "84.7"
@@ -219,9 +211,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading RTG_2abrupt.arff\n",
-      "100% [........................................................................] 26564296 / 26564296CPU times: user 2min 40s, sys: 1.45 s, total: 2min 42s\n",
-      "Wall time: 2min 47s\n"
+      "CPU times: user 2min 41s, sys: 1.4 s, total: 2min 43s\n",
+      "Wall time: 2min 43s\n"
      ]
     },
     {
