fix(Anomaly-Detection): change expect output of example and test code for Half-Space Trees

--- a/notebooks/anomaly_detection.ipynb
+++ b/notebooks/anomaly_detection.ipynb
@@ -30,8 +30,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-19T01:40:37.675384Z",
-     "start_time": "2024-05-19T01:40:34.035327Z"
+     "end_time": "2024-05-20T01:15:08.424694Z",
+     "start_time": "2024-05-20T01:15:08.189760Z"
     }
    },
    "cell_type": "code",
@@ -50,7 +50,7 @@
     "    learner.train(instance)\n",
     "    \n",
     "auc = evaluator.auc()\n",
-    "print(f\"AUC: {auc:.1f}\")"
+    "print(f\"AUC: {auc:.2f}\")"
    ],
    "id": "8f7fd1e84afbb8a9",
    "outputs": [
@@ -58,12 +58,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading electricity_tiny.arff\n",
-      "AUC: 0.6\n"
+      "AUC: 0.54\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-20T01:12:04.982687Z",
+     "start_time": "2024-05-20T01:12:04.980906Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "28966d267979885f",
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -71,7 +83,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "28966d267979885f"
+   "id": "5541f346dc4c42bc"
   }
  ],
  "metadata": {
