feat(Anomaly-Detection): add abstract class for anomaly detector algorithms

--- a/notebooks/anomaly_detection.ipynb
+++ b/notebooks/anomaly_detection.ipynb
@@ -23,15 +23,16 @@
     "## 1. Unsupervised Anomaly Detection for data streams\n",
     "\n",
     "* Recent research has been focused on unsupervised anomaly detection for data streams, as it is often difficult to obtain labeled data for training.\n",
-    "* Instead of using evaluation functions such as **test-then-train loop**, we will show a basic loop from scratch to evaluate the model's performance."
+    "* Instead of using evaluation functions such as **test-then-train loop**, we will show a basic loop from scratch to evaluate the model's performance.\n",
+    "* Please notice that lower scores indicate higher anomaly likelihood."
    ],
    "id": "c190066b9765a7e7"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-20T01:15:08.424694Z",
-     "start_time": "2024-05-20T01:15:08.189760Z"
+     "end_time": "2024-05-24T02:31:53.712036Z",
+     "start_time": "2024-05-24T02:31:51.410148Z"
     }
    },
    "cell_type": "code",
@@ -45,8 +46,8 @@
     "evaluator = AUCEvaluator(schema)\n",
     "while stream.has_more_instances():\n",
     "    instance = stream.next_instance()\n",
-    "    proba = learner.predict_proba(instance)\n",
-    "    evaluator.update(instance.y_index, proba)\n",
+    "    score = learner.score_instance(instance)\n",
+    "    evaluator.update(instance.y_index, score)\n",
     "    learner.train(instance)\n",
     "    \n",
     "auc = evaluator.auc()\n",
@@ -62,28 +63,7 @@
      ]
     }
    ],
-   "execution_count": 2
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-20T01:12:04.982687Z",
-     "start_time": "2024-05-20T01:12:04.980906Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "28966d267979885f",
-   "outputs": [],
-   "execution_count": 4
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "5541f346dc4c42bc"
+   "execution_count": 1
   }
  ],
  "metadata": {
