feat: Pipelines - updated moa jar and minor changes

--- a/notebooks/07_pipelines.ipynb
+++ b/notebooks/07_pipelines.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "*Please note that this feature is still under development; some functionality might not yet be available or change in future releases.*\n",
     "\n",
-    "**notebook last updated on 24/05/2024**"
+    "**notebook last updated on 28/05/2024**"
    ]
   },
   {
@@ -104,27 +104,14 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "Failed to import 'moa.streams.FilteredQueueStream'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[1;32morg.jpype.JPypeContext.java:-1\u001b[0m, in \u001b[0;36morg.jpype.JPypeContext.callMethod\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mException\u001b[0m: Java Exception",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mjava.lang.ClassNotFoundException\u001b[0m          Traceback (most recent call last)",
-      "File \u001b[1;32m~\\.virtualenvs\\CapyMOA-pLr6U80W\\Lib\\site-packages\\jpype\\imports.py:195\u001b[0m, in \u001b[0;36m_JImportLoader.find_spec\u001b[1;34m(self, name, path, target)\u001b[0m\n\u001b[0;32m    193\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    194\u001b[0m     \u001b[38;5;66;03m# Use forname because it give better diagnostics\u001b[39;00m\n\u001b[1;32m--> 195\u001b[0m     \u001b[38;5;28mcls\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[43m_jpype\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_java_lang_Class\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforName\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_jpype\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mJPypeClassLoader\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    197\u001b[0m     \u001b[38;5;66;03m# This code only is hit if an error was not thrown\u001b[39;00m\n",
-      "\u001b[1;31mjava.lang.ClassNotFoundException\u001b[0m: java.lang.ClassNotFoundException: moa.streams.FilteredQueueStream",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcapymoa\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstream\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MOATransformer\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcapymoa\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstream\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ClassifierPipeline\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcapymoa\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstream\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Stream\n",
-      "File \u001b[1;32m~\\Documents\\code\\CapyMOA\\src\\capymoa\\stream\\preprocessing\\__init__.py:1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpipeline\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[0;32m      2\u001b[0m     BasePipeline, ClassifierPipeline, RegressorPipeline\n\u001b[0;32m      3\u001b[0m )\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtransformer\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[0;32m      5\u001b[0m     Transformer, MOATransformer\n\u001b[0;32m      6\u001b[0m )\n\u001b[0;32m      8\u001b[0m __all__ \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBasePipeline\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mClassifierPipeline\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMOATransformer\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     14\u001b[0m ]\n",
-      "File \u001b[1;32m~\\Documents\\code\\CapyMOA\\src\\capymoa\\stream\\preprocessing\\pipeline.py:7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcapymoa\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbase\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Classifier, Regressor\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcapymoa\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01minstance\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LabeledInstance, Instance, RegressionInstance\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcapymoa\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstream\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtransformer\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Transformer\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcapymoa\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtype_alias\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LabelProbabilities, LabelIndex, TargetValue\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mBasePipeline\u001b[39;00m:\n",
-      "File \u001b[1;32m~\\Documents\\code\\CapyMOA\\src\\capymoa\\stream\\preprocessing\\transformer.py:7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcapymoa\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstream\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Schema, Stream\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcapymoa\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01minstance\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Instance\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmoa\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstreams\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m FilteredQueueStream\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmoa\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstreams\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfilters\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m StreamFilter\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mTransformer\u001b[39;00m(ABC):\n",
-      "File \u001b[1;32m~\\.virtualenvs\\CapyMOA-pLr6U80W\\Lib\\site-packages\\jpype\\imports.py:203\u001b[0m, in \u001b[0;36m_JImportLoader.find_spec\u001b[1;34m(self, name, path, target)\u001b[0m\n\u001b[0;32m    201\u001b[0m     \u001b[38;5;66;03m# Not found is acceptable\u001b[39;00m\n\u001b[0;32m    202\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m ex:\n\u001b[1;32m--> 203\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFailed to import \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m name) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mex\u001b[39;00m\n\u001b[0;32m    205\u001b[0m \u001b[38;5;66;03m# Import the java module\u001b[39;00m\n\u001b[0;32m    206\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _ModuleSpec(name, \u001b[38;5;28mself\u001b[39m)\n",
-      "\u001b[1;31mImportError\u001b[0m: Failed to import 'moa.streams.FilteredQueueStream'"
-     ]
+     "data": {
+      "text/plain": [
+       "77.59313206214689"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -145,17 +132,17 @@
     "ob_learner = OnlineBagging(schema=add_noise_transformer.get_schema(), ensemble_size=5)\n",
     "\n",
     "# Creating and populating the pipeline\n",
-    "pipeline = ClassifierPipeline(transformers=[normalisation_transformer],\n",
+    "pipeline = ClassifierPipeline(transformers=[add_noise_transformer, normalisation_transformer],\n",
     "                              learner=ob_learner)\n",
     "\n",
     "# Alternative:\n",
     "# pipeline = ClassifierPipeline()\n",
-    "# pipeline.add_transformer(normalization_transformer)\n",
     "# pipeline.add_transformer(add_noise_transformer)\n",
+    "# pipeline.add_transformer(normalization_transformer)\n",
     "# pipeline.set_learner(ob_learner)\n",
     "\n",
     "# Creating the evaluator\n",
-    "ob_evaluator = ClassificationEvaluator(schema=elec_stream.get_schema())  #TODO: Change to transformer.get_schema() to pipeline.get_schema() or something like that.\n",
+    "ob_evaluator = ClassificationEvaluator(schema=elec_stream.get_schema()) \n",
     "\n",
     "while elec_stream.has_more_instances():\n",
     "    instance = elec_stream.next_instance()\n",
@@ -176,10 +163,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c11f5b39-bf53-496e-b42c-25f89458ff03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Transformer(AddNoiseFilter) | Transformer(NormalisationFilter) | OnlineBagging'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str(pipeline)"
    ]
