--- a/notebooks/save_and_load_model.ipynb
+++ b/notebooks/save_and_load_model.ipynb
@@ -3,7 +3,11 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "In this tutorial, we illustrate the process of saving and loading a model using CapyMOA. The ElectricityTiny dataset serves as our data source, and we employ the AdaptiveRandomForestClassifier for model training. The trained model is then saved to a file, specifically 'capymoa_model.pkl'. Subsequently, we reload the model from this file and evaluate its performance on the ElectricityTiny dataset once more. As a final step, we delete the model file.",
+   "source": [
+    "# Save and Load a Model\n",
+    "\n",
+    "In this tutorial, we illustrate the process of saving and loading a model using CapyMOA. The ElectricityTiny dataset serves as our data source, and we employ the AdaptiveRandomForestClassifier for model training. The trained model is then saved to a file, specifically 'capymoa_model.pkl'. Subsequently, we reload the model from this file and evaluate its performance on the ElectricityTiny dataset once more. As a final step, we delete the model file."
+   ],
    "id": "3b115501e7927be"
   },
   {
