--- a/notebooks/anomaly_detection.ipynb
+++ b/notebooks/anomaly_detection.ipynb
@@ -4,7 +4,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "# 0. Anomaly Detection with CapyMOA\n",
+    "# Anomaly Detection with CapyMOA\n",
     "\n",
     "This notebook shows some basic usage of CapyMOA for Anomaly Detection tasks.\n",
     "\n",
