fix: updating tutorials formatting

--- a/notebooks/SSL_example.ipynb
+++ b/notebooks/SSL_example.ipynb
@@ -6,11 +6,15 @@
    "id": "354c9535-8ed8-4494-b6b1-80ec0c74ba9a",
    "metadata": {},
    "source": [
-    "# Semi-supervised Learning example\n",
+    "# Semi-supervised Learning\n",
     "\n",
     "* Preparing and executing partially and delayed labeling experiments\n",
     "\n",
-    "**Notebook last updated on 06/05/2024**"
+    "---\n",
+    "\n",
+    "*More information about CapyMOA can be found in* https://www.capymoa.org\n",
+    "\n",
+    "**notebook last updated on 05/06/2024**"
    ]
   },
   {
