fix: description in pipeline notebook

--- a/notebooks/07_pipelines.ipynb
+++ b/notebooks/07_pipelines.ipynb
@@ -11,7 +11,7 @@
     "This notebook showcases the current version of data processing pipelines in CapyMOA. \n",
     "\n",
     "* Includes an example of how preprocessing can be accomplished via pipelines and transformers.\n",
-    "* Transformers transform an instance, e.g., using standardization, normalization, etc.\n",
+    "* Transformers transform_instance an instance, e.g., using standardization, normalization, etc.\n",
     "* Pipelines bundle transformers and can also act as classifiers or regressors\n",
     "\n",
     "*Please note that this feature is still under development; some functionality might not yet be available or change in future releases.*\n",
