feat: Recurrent concept drift API

--- a/notebooks/04_drift_streams.ipynb
+++ b/notebooks/04_drift_streams.ipynb
@@ -407,7 +407,7 @@
     "# moa_evaluator = f'-e (WindowClassificationPerformanceEvaluator -w {window_size})'\n",
     "# print(f'{moa_evaluation_task} -l (meta.OzaBag {OB.CLI}) -s (ConceptDriftStream {stream_with_recurrent_concepts._CLI} ) {moa_evaluator} -i {max_instances} -f {window_size}')\n",
     "# print()\n",
-    "print(f'{results_stream_with_drifts_OB[\"windowed\"].metrics_per_window()[[\"classifications correct (percent)\", \"classified instances\"]]}')\n",
+    "# print(f'{results_stream_with_drifts_OB[\"windowed\"].metrics_per_window()[[\"classifications correct (percent)\", \"classified instances\"]]}')\n",
     "\n",
     "plot_windowed_results(results_stream_with_drifts_OB)\n"
    ],
